<resources>
    <string name="app_name">Super cars</string>
    <string name="action_settings">Settings</string>
    <string name="action_room">Room</string>
    <string name="action_cursor">Cursor</string>
    <string name="list_preference">list_preference</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="addCar">Add new super car</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="select_car_brand">Select car brand</string>
    <string name="select_car_volume">Select car volume</string>
    <string name="select_car_year">Select car year</string>
    <string name="enter_car_model">Enter car model</string>
    <string name="enter_price_car">Enter price car</string>
    <string name="first_cursor_fragment_label">First cursor fragment</string>
    <string name="second_cursor_fragment_label">Second cursor fragment</string>
    <string name="list_preference_room_cursor">list_preference_room_cursor</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_record">Delete record</string>
    <string name="delete_entry">Delete entry</string>
    <string name="edit_entry">Edit entry</string>
</resources>