<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SecondFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/black"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/select_car_brand"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <Spinner
            android:id="@+id/carBrandSpinner"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:entries="@array/brands" />


        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/black" />


        <TextView
            android:id="@+id/textView3"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_car_model"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/carModel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_car_model"
            android:inputType="textPersonName" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textViewYear"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/select_car_year"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <NumberPicker
            android:id="@+id/carYearPicker"
            android:layout_width="215dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:width="100dp"
            android:orientation="vertical"
            tools:ignore="MissingConstraints" />

        <!--    <View-->
        <!--        android:layout_width="wrap_content"-->
        <!--        android:layout_height="1dp"-->
        <!--        android:background="@android:color/black"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent"-->
        <!--        app:layout_constraintBottom_toBottomOf="@+id/carYearPicker" />-->
        <!--    <TextView-->
        <!--        android:id="@+id/textViewVolume"-->
        <!--        android:layout_width="200dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:text="@string/select_car_volume"-->
        <!--        android:textColor="@color/black"-->
        <!--        android:textSize="20dp"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/carVolumeSpinner"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent" />-->
        <!--    <Spinner-->
        <!--        android:id="@+id/carVolumeSpinner"-->
        <!--        android:layout_width="215dp"-->
        <!--        android:layout_height="wrap_content"-->
        <!--        android:entries="@array/volumes"-->
        <!--        app:layout_constraintBottom_toTopOf="@+id/textView2"-->
        <!--        app:layout_constraintEnd_toEndOf="parent"-->
        <!--        app:layout_constraintStart_toStartOf="parent" />-->

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/black" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/enter_price_car"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <EditText
            android:id="@+id/carPrice"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_price_car"
            android:inputType="numberSigned" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/black" />


        <Button
            android:id="@+id/button_newSuperCar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="80dp"
            android:text="@string/addCar" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>